# rust-service-template

./: Cargo.toml  README.MD
migration/src/: lib.rs  m20251031_154708_create_user_schema.rs
src/: main.rs
src/config/: config.rs
src/entity/: user.rs
