[package]
name = "rust-service-template"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
chrono = "0.4.42"
color-eyre = "0.6.5"
figment = "0.10.19"
futures = "0.3.31"
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
sea-orm-cli = "1.1.17"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
